<resources>
    <!-- app -->
    <string name="app_name">News App</string>

    <!-- SearchNews Fragment -->
    <string name="news_search_hint">Search…</string>

    <!-- Article Fragment -->
    <string name="fab_favourite_description">Add to favourites</string>

    <!-- BreakingNews Fragment -->
    <string name="article_preview_image_description">Article preview image</string>

    <!-- Nav View -->
    <string name="bottom_navigation_menu_breaking_news">Breaking News</string>
    <string name="bottom_navigation_menu_saved_news">Saved News</string>
    <string name="bottom_navigation_menu_search_news">Search News</string>

    <!-- Popup Menu -->
    <string name="more_options_menu_save">Save</string>
    <string name="more_options_menu_remove">Remove</string>
    <string name="more_options_menu_share">Share</string>

    <!-- App Bar Menu -->
    <string name="app_bar_settings">Settings</string>

    <!-- Exceptions misc -->
    <string name="item_error_message_button_text">Retry</string>
    <string name="item_error_message_default">Failed to connect</string>
    <string name="item_empty_list_message">No items found</string>

    <!-- Article Item Preview -->
    <string name="publishedAt">%1$s | %2$d %3$s %4$d</string>

    <!-- Preference Titles -->
    <string name="news_localization_header">News localization</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="news_country_title">Breaking news country</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Category Chips -->
    <string name="business_chip">Business</string>
    <string name="entertainment_chip">Entertainment</string>
    <string name="general_chip">General</string>
    <string name="health_chip">Health</string>
    <string name="science_chip">Science</string>
    <string name="sports_chip">Sports</string>
    <string name="technology_chip">Technology</string>
</resources>